--- a/question.html
+++ b/question.html
@@ -11,7 +11,7 @@
     <header>
         <div class="flex justify-between bg-green-100 rounded-md mx-8 px- my-5 text-white">
             <div class="flex"> <div><img src="assets/logo.png" alt=""></div><div class="pt-4 text-black"> Dev <b>Board</b></div></div>
-            <button id="back-desk" class="rounded-md bg-blue-800 px-5">Back to Desk</button>
+            <button onclick="window.location.href='./index.html' "id="back-desk" class="rounded-md bg-blue-800 px-5">Back to Desk</button>
          </div>
     </header>
     <main class="mx-10 my-8">
